--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 <body>
   <h1>Really Awesome Music Site</h1>
-  
+  <hr>
   <div class="bandSearch">
     <form name= "myForm" action="" method="get" id="form" >
       <label for="search"></label>
-      <input name = "myBandBar" type="text" id="bandBar" placeholder="Artist or Band Name">
+      <input name = "myBandBar" type="text" id="bandBar" placeholder="Artist or Band Name" required>
       <button type="submit" id="submitButton">Search</button>
     </form>
   </div>
+  <hr>
   <div id="displayResults"></div>
 </body>
 </html>
