--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Music Search</title>
 </head>
 <body>
-  <h1>Really Awesome Music Site</h1>
+  <h1>Stockdale's Epic Music Emporium</h1>
   <hr>
   <div class="bandSearch">
     <form name= "myForm" action="" method="get" id="form" >
